--- a/bsconfig.json
+++ b/bsconfig.json
@@ -6,13 +6,13 @@
   "sources": [
     "src"
   ],
-  "package-specs":
-  {
+  "refmt": 3,
+  "package-specs": {
     "module": "commonjs",
     "in-source": true
-  },    
-  "bs-dependencies" : [
-      // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+  },
+  "bs-dependencies": [
+    // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ],
   "namespace": true
 }
