--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,7 +4,13 @@
   "name": "testingbug",
   "version": "0.1.0",
   "sources": [
-    "src"
+    {
+      "dir": "src"
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
   ],
   "refmt": 3,
   "package-specs": {
@@ -13,6 +19,9 @@
   },
   "bs-dependencies": [
     // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+  ],
+  "bs-dev-dependencies": [
+    "bs-jest"
   ],
   "namespace": true
 }
