--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "bsb -make-world",
+    "test": "jest",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world"
   },
@@ -11,7 +12,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "2.0.0"
+    "bs-jest": "^0.2.0",
+    "bs-platform": "2.0.0",
+    "jest": "^21.2.1"
   },
   "dependencies": {
     "js-yaml": "^3.10.0"
