--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "build": "bsb -make-world",
-    "test": "jest",
+    "test": "jest --coverage",
+    "test-watch": "jest --coverage --watch",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world"
   },
