--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,10 +18,10 @@
     "in-source": true
   },
   "bs-dependencies": [
-    // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+    "bs-json"    
   ],
   "bs-dev-dependencies": [
-    "bs-jest"
+    "bs-jest"    
   ],
   "namespace": true
 }
